{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 16,
  "lineage": "de86c46d-c848-9d56-46b8-6e86d356707e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "managementnet-allow-http-ssh-rdp-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-09T05:16:58.583-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/global/firewalls/managementnet-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "managementnet-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/managementnet",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/firewalls/managementnet-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.managementnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mynetwork-allow-http-ssh-rdp-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-09T05:22:46.628-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/global/firewalls/mynetwork-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "mynetwork-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/mynetwork",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/firewalls/mynetwork-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "privatenet-allow-http-ssh-rdp-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-09T05:19:20.188-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/global/firewalls/privatenet-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "privatenet-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/privatenet",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/firewalls/privatenet-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "managementnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/managementnet",
            "mtu": 0,
            "name": "managementnet",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/managementnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mynetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/mynetwork",
            "mtu": 0,
            "name": "mynetwork",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/mynetwork"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "privatenet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/privatenet",
            "mtu": 0,
            "name": "privatenet",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/privatenet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "managementsubnet-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-09T05:17:00.823-07:00",
            "gateway_address": "10.130.0.1",
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/regions/us-west1/subnetworks/managementsubnet-us",
            "ip_cidr_range": "10.130.0.0/20",
            "name": "managementsubnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/managementnet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/regions/us-west1/subnetworks/managementsubnet-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.managementnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesubnet-second-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-09T05:19:20.683-07:00",
            "gateway_address": "172.20.0.1",
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/regions/us-east1/subnetworks/privatesubnet-second-subnet",
            "ip_cidr_range": "172.20.0.0/24",
            "name": "privatesubnet-second-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/privatenet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/regions/us-east1/subnetworks/privatesubnet-second-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "privatesubnet-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-09T05:19:22.127-07:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/regions/us-west1/subnetworks/privatesubnet-us",
            "ip_cidr_range": "172.16.0.0/24",
            "name": "privatesubnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/privatenet",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/regions/us-west1/subnetworks/privatesubnet-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.privatenet"
          ]
        }
      ]
    },
    {
      "module": "module.managementnet-us-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-west1-a/disks/managementnet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-west1-a/instances/managementnet-us-vm",
            "instance_id": "5642907183994518820",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "__UOpYMeNDA=",
            "name": "managementnet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.145.91.228",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/managementnet",
                "network_ip": "10.130.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/regions/us-west1/subnetworks/managementsubnet-us",
                "subnetwork_project": "qwiklabs-gcp-03-e7ebd83f344e"
              }
            ],
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-west1-a/instances/managementnet-us-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.managementnet",
            "google_compute_subnetwork.managementsubnet-us"
          ]
        }
      ]
    },
    {
      "module": "module.mynet-second-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-east1-d/disks/mynet-second-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-east1-d/instances/mynet-second-vm",
            "instance_id": "1093145729162951672",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "__UOpYMeNDA=",
            "name": "mynet-second-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.73.191.182",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/mynetwork",
                "network_ip": "10.142.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/regions/us-east1/subnetworks/mynetwork",
                "subnetwork_project": "qwiklabs-gcp-03-e7ebd83f344e"
              }
            ],
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-east1-d/instances/mynet-second-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-d"
          },
          "dependencies": [
            "google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "module": "module.mynet-us-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-west1-a/disks/mynet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-west1-a/instances/mynet-us-vm",
            "instance_id": "5426759961231113207",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "__UOpYMeNDA=",
            "name": "mynet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.168.136.55",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/mynetwork",
                "network_ip": "10.138.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/regions/us-west1/subnetworks/mynetwork",
                "subnetwork_project": "qwiklabs-gcp-03-e7ebd83f344e"
              }
            ],
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-west1-a/instances/mynet-us-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.mynetwork"
          ]
        }
      ]
    },
    {
      "module": "module.privatenet-us-vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230711",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-west1-a/disks/privatenet-us-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-west1-a/instances/privatenet-us-vm",
            "instance_id": "5299700698173029003",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "__UOpYMeNDA=",
            "name": "privatenet-us-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.82.80.50",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/global/networks/privatenet",
                "network_ip": "172.16.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/regions/us-west1/subnetworks/privatesubnet-us",
                "subnetwork_project": "qwiklabs-gcp-03-e7ebd83f344e"
              }
            ],
            "project": "qwiklabs-gcp-03-e7ebd83f344e",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-e7ebd83f344e/zones/us-west1-a/instances/privatenet-us-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.privatenet",
            "google_compute_subnetwork.privatesubnet-us"
          ]
        }
      ]
    }
  ]
}